UPDATE: Skills section styles

--- a/app/javascript/davechmura_website/stylesheets/_header.sass
+++ b/app/javascript/davechmura_website/stylesheets/_header.sass
@@ -15,3 +15,10 @@ header
   @apply flex flex-no-wrap
   a
     @apply px-4
+
+.social-links
+  @apply flex flex-row mr-2
+.social
+  @apply flex items-center justify-center text-grey-darker font-semibold border-2 text-xs border-blue rounded-full mx-1 h-8 w-8 bg-blue-lightest
+  &:hover
+    @apply bg-blue-lighter text-white
