--- a/app/javascript/davechmura_website/stylesheets/application.sass
+++ b/app/javascript/davechmura_website/stylesheets/application.sass
@@ -11,17 +11,9 @@ img[alt=""] img:not([alt])
   border: 5px dashed #c00
 
 body
-  @apply flex flex-col h-full
+  @apply flex flex-col min-h-screen
 .content
-  @apply  px-6 py-4 mx-auto -mt-6
+  @apply flex-grow px-6 py-4 mx-auto -mt-6
 
 .debug_dump
-  grid-column: span 12
-  height: 125px
-  max-height: auto
-  border-radius: 1rem
-  padding: 1rem
-  clear: both
-  float: left
-  margin: 15px
-  background-color: transparentize(grey, 0.3)
+  @apply bg-grey-lighter border border-red-dark rounded-lg p-2 w-2/3 mx-auto
