--- a/app/views/resume/_skills.html.haml
+++ b/app/views/resume/_skills.html.haml
@@ -1,14 +1,101 @@
+-# %h2 Skills
+-# %ul
+-#   %li
+-#     %i.fas.fa-hands-helping
+-#     %b LEADERSHIP:
+-#     %ul
+-#       .resume-skills-list
+-#         %li Training,
+-#         %li Mentoring,
+-#         %li Hiring and Managing Developers,
+-#         %li Product Management,
+-#         %li Product Vision,
+-#         %li Consulting,
+-#         %li Interpersonal Communication,
+-#         %li Facilitation,
+-#         %li Client Management,
+-#         %li Community Building,
+-#         %li Fostering Collaboration
+-#
+-#     %i.fas.fa-code-branch
+-#     %b TECHNICAL:
+-#     %ul
+-#       .resume-skills-list
+-#         %li Ruby,
+-#         %li Ruby on Rails,
+-#         %li Javascript / JQuery / Vue.js,
+-#         %li SQL / PostgreSQL / MySQL,
+-#         %li HAML / HTML5 / ERB,
+-#         %li SASS / CSS,
+-#         %li Tailwindcss / Bootstrap / Bourbon,
+-#         %li RSpec / Capybara,
+-#         %li Git / Github / Bitbucket,
+-#         %li Sketch,
+-#         %li Omnigraffle,
+-#         %li Adobe Creative Suite,
+-#         %li xcode
+-#
+-#     %i.fab.fa-black-tie
+-#     %b BUSINESS:
+-#     %ul
+-#       .resume-skills-list
+-#         %li Product Marketing,
+-#         %li Product Roadmaps,
+-#         %li Market Research,
+-#         %li Competitive Analysis,
+-#         %li Customer Support,
+-#         %li Technical Documentation,
+-#         %li Lead Generation,
+-#         %li Requirements Gathering
 %h2 Skills
-%ul
-  %li
+.resume-skills-group
+  .resume-skills-set
     %i.fas.fa-hands-helping
-    %b LEADERSHIP:
-    %p Training, Mentoring, Hiring and Managing Developers, Product Management, Product Vision, Consulting, Interpersonal Communication, Facilitation,  Client Management, Community Building, Fostering Collaboration
-  %li
-    %i.fas.fa-code-branch
-    %b TECHNICAL:
-    Ruby, Javascript (jquery), SQL / PostgreSQL / MySQL, Ruby on Rails, HAML/HTML5/ERB, SASS / CSS, Bootstrap / Bourbon, RSpec / Capybara, Git / Github / Bitbucket,  Sketch, Omnigraffle, Adobe Creative Suite, xcode
-  %li
-    %i.fab.fa-black-tie
-    %b BUSINESS:
-    Product Marketing, Product Roadmaps, Market Research, Competitive Analysis, Customer Support, Technical Documentation, Lead Generation,  Requirements Gathering
+    %b LEADERSHIP
+  .resume-skills-items
+    %ul
+      %li Training,
+      %li Mentoring,
+      %li Hiring and Managing Developers,
+      %li Product Management,
+      %li Product Vision,
+      %li Consulting,
+      %li Interpersonal Communication,
+      %li Facilitation,
+      %li Client Management,
+      %li Community Building,
+      %li Fostering Collaboration
+
+.resume-skills-group
+  .resume-skills-set
+    %i.fas.fa-hands-helping
+    %b TECHNICAL
+  .resume-skills-items
+    %ul
+      %li Ruby,
+      %li Ruby on Rails,
+      %li Javascript / JQuery / Vue.js,
+      %li SQL / PostgreSQL / MySQL,
+      %li HAML / HTML5 / ERB,
+      %li SASS / CSS,
+      %li Tailwindcss / Bootstrap / Bourbon,
+      %li RSpec / Capybara,
+      %li Git / Github / Bitbucket,
+      %li Sketch,
+      %li Omnigraffle,
+      %li Adobe Creative Suite,
+      %li xcode
+.resume-skills-group
+  .resume-skills-set
+    %i.fas.fa-hands-helping
+    %b BUSINESS
+  .resume-skills-items
+    %ul
+      %li Product Marketing,
+      %li Product Roadmaps,
+      %li Market Research,
+      %li Competitive Analysis,
+      %li Customer Support,
+      %li Technical Documentation,
+      %li Lead Generation,
+      %li Requirements Gathering
