--- a/app/views/resume/_skills.html.haml
+++ b/app/views/resume/_skills.html.haml
@@ -47,7 +47,9 @@
 -#         %li Technical Documentation,
 -#         %li Lead Generation,
 -#         %li Requirements Gathering
-%h2 Skills
+
+
+-# %h2 Skills
 .resume-skills-group
   .resume-skills-set
     %i.fas.fa-hands-helping
@@ -68,7 +70,7 @@
 
 .resume-skills-group
   .resume-skills-set
-    %i.fas.fa-hands-helping
+    %i.fas.fa-code-branch
     %b TECHNICAL
   .resume-skills-items
     %ul
@@ -87,7 +89,7 @@
       %li xcode
 .resume-skills-group
   .resume-skills-set
-    %i.fas.fa-hands-helping
+    %i.fab.fa-black-tie
     %b BUSINESS
   .resume-skills-items
     %ul
