--- a/app/views/resume/_activities.html.haml
+++ b/app/views/resume/_activities.html.haml
@@ -1,15 +1,16 @@
-%h3 Activities
-%ul
-  %li
-    %i.fas.fa-skiing
-    Skiing
-  %li
-    %i.fas.fa-guitar
-    Playing guitar - song writing
-  %li
-    %i.fas.fa-dog
-    Hanging with and training our pets
-    %i.fas.fa-cat
-  %li
-    %i.fas.fa-hands-helping
-    Volunteering
+.resume-activities-sidebar
+  %h2 Activities
+  %ul
+    %li
+      %i.fas.fa-skiing
+      Skiing
+    %li
+      %i.fas.fa-guitar
+      Playing guitar - song writing
+    %li
+      %i.fas.fa-dog
+      Hanging with - training our pets
+      %i.fas.fa-cat
+    %li
+      %i.fas.fa-hands-helping
+      Volunteering
