UPDATE: Summary style for resume

--- a/app/javascript/davechmura_website/stylesheets/resume.sass
+++ b/app/javascript/davechmura_website/stylesheets/resume.sass
@@ -34,9 +34,9 @@
 .resume-summary
   @apply bg-blue-lighter p-4 px-8 rounded-lg
   h2
-    @apply text-blue text-2xl float-left px-4
+    @apply text-blue text-5xl float-left px-2  pr-3 align-middle leading-none
   p
-    @apply text-lg leading-normal
+    @apply text-xl leading-tight font-serif italic
 
 .resume
   @apply flex  flex-row text-blue-darkest
