UPDATE: Style tweeks

--- a/app/javascript/davechmura_website/stylesheets/resume.sass
+++ b/app/javascript/davechmura_website/stylesheets/resume.sass
@@ -64,15 +64,15 @@
 
   .resume-a-bit-about-me-sidebar
     // background-color: #79A092
-    @apply bg-blue-light p-4 pb-8 -mt-2 rounded-lg
+    @apply bg-blue-light p-2 pb-8 -mt-2 rounded-lg
     p
-      @apply text-blue-darker text-base px-4
+      @apply text-blue-darker text-base px-1 pt-1
 
   .resume-education-sidebar
     // background-color: #607B9B
     @apply bg-blue-darkest text-white rounded-lg -mt-4 px-4 pt-1 pb-4
     ul
-      @apply -ml-8
+      @apply -ml-10
     h2
       @apply text-blue-lightest mb-2
     h4
@@ -86,7 +86,7 @@
     h2
       @apply text-2xl text-blue-lighter
     li
-      @apply list-reset -ml-6 leading-loose
+      @apply list-reset -ml-10 leading-loose
 
 .resume-qualifications
   @apply bg-blue-lightest flex flex-col rounded-lg w-full
