--- a/app/views/resume/_activities.html.haml
+++ b/app/views/resume/_activities.html.haml
@@ -2,11 +2,14 @@
   %h2 Activities
   %ul
     %li
+      %i.fas.fa-guitar
+      Playing guitar
+    %li
+      %i.fas.fa-book-open
+      Learning
+    %li
       %i.fas.fa-skiing
       Skiing
-    %li
-      %i.fas.fa-guitar
-      Playing guitar - song writing
     %li
       %i.fas.fa-dog
       Hanging with - training our pets
@@ -14,3 +17,4 @@
     %li
       %i.fas.fa-hands-helping
       Volunteering
+      %i.fas.fa-paw
