--- a/app/javascript/davechmura_website/stylesheets/resume.sass
+++ b/app/javascript/davechmura_website/stylesheets/resume.sass
@@ -70,7 +70,7 @@
 
   .resume-education-sidebar
     // background-color: #607B9B
-    @apply bg-blue-darkest text-white rounded-lg -mt-4 px-4 pt-1 pb-4
+    @apply bg-blue-darkest text-white rounded-lg -mt-3 px-4 pt-1 pb-4
     ul
       @apply -ml-10
     h2
@@ -82,7 +82,7 @@
 
   .resume-activities-sidebar
     background-color: #e64141
-    @apply bg-blue-darker p-4 text-base text-blue-lightest -mt-4 rounded-lg
+    @apply bg-blue-darker p-4 pb-6 text-base text-blue-lightest -mt-4 rounded-lg
     h2
       @apply text-2xl text-blue-lighter
     li
