UPDATE: Style for call to action

--- a/app/javascript/davechmura_website/stylesheets/agency.sass
+++ b/app/javascript/davechmura_website/stylesheets/agency.sass
@@ -22,7 +22,9 @@
 .intro-call-to-action
   @apply mt-6
   a
-    @apply px-4 py-2 rounded bg-yellow-dark text-2xl text-white
+    @apply px-4 py-2 rounded bg-yellow-dark text-2xl text-white no-underline
+    &:hover
+      @apply text-blue no-underline
 
 .roles
   @apply text-center
