--- a/app/javascript/davechmura_website/stylesheets/posts.sass
+++ b/app/javascript/davechmura_website/stylesheets/posts.sass
@@ -6,7 +6,6 @@
   & .trix-content
     @apply h-48  overflow-y-hidden border-b
 
-
 .posts-post-header
   @apply border-b pb-4 mb-3 flex justify-between
   a
@@ -17,14 +16,26 @@
 .posts-post-author
    @apply text-sm text-grey-dark
 
-.post-tags
-  @apply bg-grey-lightest flex flex-wrap
-
-.post-tag
-  @apply  bg-blue w-auto my-2 mx-2 rounded py-1 px-2 text-center
-
 .posts-post-footer
   @apply  text-sm text-grey-darker bg-grey-lighter mt-3 py-4 pl-4
+
+.post
+  @apply w-3/4 mx-auto mt-2
+
+.post-title
+  @apply my-4 text-4xl font-normal text-blue-dark
+
+.post-tags
+  @apply flex flex-wrap py-2 mt-2 -ml-2
+
+.post-tag
+  @apply  bg-blue-lighter text-blue-darker font-semibold w-auto my-2 mx-2 rounded-lg py-2 px-3 text-center
+
+.post-meta
+  @apply flex flex-row justify-between h-24 my-auto align-middle
+
+.post-author
+  @apply font-semibold text-grey-darker my-auto
 
 .post-form
   @apply flex flex-col p-6 w-3/4 mx-auto
