--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,23 +1,30 @@
-%p#notice= notice
+.post
+  %p#notice= notice
 
-%h1= @post.title
-.post-tags
-  - @post.tag_list.each do |tag|
-    .post-tag= tag
-%p
-  %b Status:
-  = @post.status
 
-  %b Author:
-  = @post.user.email
-
-%p
-  .trix-content= @post.content
+  .post-meta
+    %h1.post-title= @post.title
+    .post-author
+      = "Author: #{@post.user.email}"
+  .post-status
+    %b Status:
+    = @post.status
 
 
 
--# = link_to 'Edit', edit_post_path(@post)
--# \|
--# = link_to 'Back', posts_path
-= link_to 'Edit', edit_post_path(@post) if policy(@post).update?
-= link_to 'Delete', post_path(@post), method: :delete if policy(@post).destroy?
+  .post-tags
+    - @post.tag_list.each do |tag|
+      .post-tag= tag
+
+
+
+  %p.post-content
+    .trix-content= @post.content
+
+
+
+  -# = link_to 'Edit', edit_post_path(@post)
+  -# \|
+  -# = link_to 'Back', posts_path
+  = link_to 'Edit', edit_post_path(@post) if policy(@post).update?
+  = link_to 'Delete', post_path(@post), method: :delete if policy(@post).destroy?
