UPDATE: Restyle Post

--- a/app/javascript/davechmura_website/stylesheets/posts.sass
+++ b/app/javascript/davechmura_website/stylesheets/posts.sass
@@ -9,7 +9,7 @@
 .posts-post-header
   @apply border-b pb-4 mb-3 flex justify-between
   a
-    @apply text-blue-dark no-underline
+    @apply text-blue-dark no-underline font-thin text-4xl
     &:hover
       @apply text-blue-darker
 
