--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,11 +1,12 @@
 .post-form
   = form_for @post do |f|
     - if @post.errors.any?
-      #error_explanation
+      #error-explanation
         %h2= "#{pluralize(@post.errors.count, "error")} prohibited this post from being saved:"
         %ul
           - @post.errors.full_messages.each do |message|
-            %li= message
+            %li.error-message= message
+
 
     .field.post-form-title
       = f.label "Title:"
