FIX: Styles for landing page

--- a/app/javascript/davechmura_website/stylesheets/_header.sass
+++ b/app/javascript/davechmura_website/stylesheets/_header.sass
@@ -1,6 +1,6 @@
 header
-  min-height: 3.5rem
-  @apply bg-grey-darker flex flex-wrap items-center justify-center h-auto w-screen
+
+  @apply bg-grey-darker flex flex-wrap items-center justify-center h-auto w-full
   a
     @apply text-blue-lightest font-sans no-underline text-xl
   a:hover
@@ -9,7 +9,7 @@ header
     @apply justify-between
 
 .header-logo
-  @apply w-12 h-12 rounded-full ml-4
+  @apply w-16 h-16 rounded-full ml-4 my-1 mt-2
 
 .header-links
   @apply flex flex-no-wrap
