--- a/app/javascript/davechmura_website/stylesheets/application.sass
+++ b/app/javascript/davechmura_website/stylesheets/application.sass
@@ -12,8 +12,18 @@ img[alt=""] img:not([alt])
 
 body
   @apply flex flex-col min-h-screen
+
 .content
   @apply flex-grow px-6 py-4 mx-auto -mt-6
 
 .debug_dump
   @apply bg-grey-lighter border border-red-dark rounded-lg p-2 w-2/3 mx-auto
+
+/*! debug.css | MIT License | https://gist.github.com/zaydek/6b2e55258734deabbd2b4a284321d6f6 */
+// To use add a {:debug => ""} to any element you want to understand better
+[debug], [debug] *:not(g):not(path)
+	color:hsla(210, 100%, 100%, 0.9) !important
+	background: hsla(210, 100%,  50%, 0.5) !important
+	outline: solid 0.25rem hsla(210, 100%, 100%, 0.5) !important
+	box-shadow: none !important
+	filter:     none !important
