--- a/app/javascript/davechmura_website/stylesheets/agency.sass
+++ b/app/javascript/davechmura_website/stylesheets/agency.sass
@@ -2,8 +2,10 @@
 @import 'variables'
 
 .mast-header
+
   background-image: url("../images/DavePics/hug_70.svg")
-  @apply text-center rounded-lg bg-scroll bg-center bg-no-repeat bg-cover
+
+  @apply text-center rounded-b-lg bg-scroll bg-center bg-no-repeat bg-cover bg-grey-lighter -mt-10 -mx-6
   .mast-header-text
     @apply  p-24 text-blue-darker m-12
 
