--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,6 +1,6 @@
 
 / Header
-.mast-header.-mx-16.-mt-10
+.mast-header
 
   .mast-header-text
     .intro-lead-in Chief Instigator, passionate developer, mentor.
