FIX: Style for resume header.

--- a/app/javascript/davechmura_website/stylesheets/resume.sass
+++ b/app/javascript/davechmura_website/stylesheets/resume.sass
@@ -4,10 +4,9 @@
   @apply  w-full flex flex-col mt-3
 
 .resume-header
-  // height: 250px
   background-color:  #EBAA1E
   background-image: url('../images/resume_header.jpg')
-  @apply h-32 border-white border-b-4 rounded-lg bg-no-repeat bg-auto bg-right
+  @apply h-32 border-white border-b-4 rounded-lg bg-no-repeat bg-cover bg-right
 
   .resume-contact
     // @include transparent(0.85, 85)
