--- a/app/javascript/davechmura_website/stylesheets/agency.sass
+++ b/app/javascript/davechmura_website/stylesheets/agency.sass
@@ -2,10 +2,10 @@
 @import 'variables'
 
 .mast-header
-
   background-image: url("../images/DavePics/hug_70.svg")
-
-  @apply text-center rounded-b-lg bg-scroll bg-center bg-no-repeat bg-cover bg-grey-lighter -mt-10 -mx-6
+  @apply text-center rounded-b-lg bg-center bg-no-repeat bg-cover bg-grey-lighter -mt-10
+  @screen sm
+    @apply -mt-10 -mx-6
   .mast-header-text
     @apply  p-24 text-blue-darker m-12
 
@@ -24,9 +24,9 @@
 .intro-call-to-action
   @apply mt-6
   a
-    @apply px-4 py-2 rounded bg-yellow-dark text-2xl text-white no-underline
+    @apply px-6 py-2 rounded-full bg-yellow-dark text-2xl text-grey-darker no-underline
     &:hover
-      @apply text-blue no-underline
+      @apply text-blue no-underline bg-yellow-light
 
 .roles
   @apply text-center
