--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     - if content_for? :head
       = yield :head
 
-  %body.flex.flex-col
+  %body
     #page-top
     - unless Rails.env.production?
       .corner-ribbon.top-right.sticky.red.shadow= link_to('Work in Progress', project_status_path)
