--- a/app/views/pages/_skills.html.haml
+++ b/app/views/pages/_skills.html.haml
@@ -26,7 +26,7 @@
       %p I support Girl Develop IT Ann Arbor as a teaching assistant. I develop workshops and tutorials to help my team continue to learn and grow at work.
 
     .skill-item
-      %i.fas.fa-cogs
+      %i.far.fa-analytics
       %h4 Product Strategy
       %p Bringing your product successfully to market requires more than 'management', it requires vision. I have brought several products to fruition. From conception, design, user testing, coding, marketing, distribution and support.
 
