--- a/app/javascript/davechmura_website/stylesheets/_header.sass
+++ b/app/javascript/davechmura_website/stylesheets/_header.sass
@@ -1,11 +1,11 @@
 header
-  @apply bg-grey-darker flex flex-col items-center justify-center h-auto w-full
+  @apply bg-grey-darker flex flex-col items-center justify-center h-auto w-screen
   a
     @apply text-blue-lightest font-sans no-underline text-xl
   a:hover
     @apply text-blue-lighter no-underline
   @screen sm
-    @apply justify-between flex-row
+    @apply justify-between flex-row w-full
 
 .header-logo
   @apply w-16 h-16 rounded-full ml-4 my-1 mt-2
