--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,6 +1,6 @@
 footer.footer
   .footer-logo
-    = link_to image_tag(asset_pack_path('davechmura_website/images/DavePics/hug.jpg'), alt: "#{(t :sitename)} Logo, link to home page.", id: root_path(anchor: 'page-top')), root_path
+    = link_to image_tag(asset_pack_path('media/hug.jpg'), alt: "#{(t :sitename)} Logo, link to home page.", id: root_path(anchor: 'page-top')), root_path
   .footer-links
     .main-links
       = link_to 'About', about_path
