--- a/app/views/resume/_about_me.html.slim
+++ b/app/views/resume/_about_me.html.slim
@@ -3,5 +3,5 @@
   p
     | My unusually diverse background makes me an ideal candidate.  My range of experience includes project management, teaching and counseling students and staff as director of a boarding school, policy development,
     .field-circle
-      = image_tag(asset_pack_path"davechmura_website/images/field_circle.png", alt: 'Field of daisies. Stockbrdige, MA')
+      = image_tag(asset_pack_path"media/field_circle.png", alt: 'Field of daisies. Stockbrdige, MA')
   p marketing, customer relations, social networking, web site development, crisis counseling, quality assurance, computer maintenance, trouble-shooting & repair, software development, and large scale software deployment. This eclectic mix of skills provides me with an excellent mix of technological knowledge, observational skills and an understanding of what individuals and groups need to be inspired, work, and meet their potential.
