--- a/app/javascript/davechmura_website/stylesheets/resume.sass
+++ b/app/javascript/davechmura_website/stylesheets/resume.sass
@@ -114,9 +114,11 @@
 
 .resume-skills-set
   @apply float-right text-2xl text-blue-lightest inline-block w-48 pt-2 ml-6 mb-3
+  svg
+    @apply mr-1
 
 .resume-skills-items
-  @apply  text-blue-darker text-base
+  @apply  text-blue-darker text-base -ml-4
 
 .resume-job-title
   @apply text-lg my-2 text-blue-dark -mb-1
