REFACTOR: slim back to haml

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -6,7 +6,7 @@
     .intro-lead-in Chief Instigator, passionate developer, mentor.
     .intro-heading Let's work together!
     .intro-call-to-action
-      a.page-scroll href="#skills"  Tell Me More
+      %a.page-scroll{:href => "#skills"} Tell Me More
 
 = render 'intro_text'
 
