--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,8 +1,8 @@
-doctype html
-html
-  head
-    meta content=("text/html; charset=UTF-8") http-equiv="Content-Type" /
-    title= (t :sitename)
+!!!
+%html
+  %head
+    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %title= (t :sitename)
     = csrf_meta_tags
     = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
@@ -10,14 +10,14 @@ html
     - if content_for? :head
       = yield :head
 
-  body
+  %body
     #page-top
     - unless Rails.env.production?
       .corner-ribbon.top-right.sticky.red.shadow= link_to('Work in Progress', project_status_path)
 
     = render 'layouts/header'
 
-    .content.flex-1#content class=controller.controller_name
+    .content#content{:class => controller.controller_name}
       = render 'layouts/flash_messages'
       = yield
     = debug(params) if Rails.env.development?
