--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -2,10 +2,10 @@
   = form_for @post do |f|
     - if @post.errors.any?
       #error-explanation
-        h2= "# pluralize(@post.errors.count, 'error') prohibited this post from being saved:"
-        ul
+        %h2= "# pluralize(@post.errors.count, 'error') prohibited this post from being saved:"
+        %ul
           - @post.errors.full_messages.each do |message|
-            li.error-message= message
+            %li.error-message= message
 
 
     .field.post-form-title
