FIX: email icon

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -24,8 +24,8 @@
 
       = mail_to 'dschmura@humbledaisy.com', subject: 'A message to ye from ye old site' do
         .social
-          %/ %i.fab.fa-envelope
-          M
+          %i.fas.fa-envelope
+
       / .social
       /   %i.fas.fa-podcast
       = link_to github_path, target: '_blank' do
