--- a/app/javascript/davechmura_website/stylesheets/_footer.sass
+++ b/app/javascript/davechmura_website/stylesheets/_footer.sass
@@ -1,15 +1,15 @@
 @import 'variables'
 
 footer
-  @apply pin-b w-full
+  @apply bottom-0 w-full
 
 
 .footer
-  @apply bg-blue-lightest p-2 flex content-center self-center justify-around
+  @apply bg-blue-100 p-2 flex content-center self-center justify-around
   @screen sm
-    // @apply bg-yellow
+    // @apply bg-yellow-500
   @screen md
-    // @apply bg-green
+    // @apply bg-green-500
 
 .footer-logo
   @apply  w-1/4
@@ -21,16 +21,16 @@ footer
   .main-links
     @apply  content-center self-center justify-center
     a
-      @apply px-3 text-lg text-blue-dark
+      @apply px-3 text-lg text-blue-700
       &:hover
-        @apply no-underline text-blue-light
+        @apply no-underline text-blue-300
       @screen sm
         @apply text-sm px-1
   .copyright
     a
-      @apply text-grey-dark text-sm block self-center
+      @apply text-gray-700 text-sm block self-center
       &:hover
-        @apply no-underline text-blue
+        @apply no-underline text-blue-500
 
 .foot-social
   @apply  w-1/4 flex content-center self-center justify-center
@@ -38,6 +38,6 @@ footer
 .social-links
   @apply flex flex-row mr-2
 .social
-  @apply flex items-center justify-center text-grey-darker font-semibold border-2 text-xs border-blue rounded-full mx-1 h-8 w-8 bg-blue-lightest
+  @apply flex items-center justify-center text-gray-700 font-semibold border-2 text-xs border-blue-500 rounded-full mx-1 h-8 w-8 bg-blue-100
   &:hover
-    @apply bg-blue-lighter text-white
+    @apply bg-blue-300 text-white
