--- a/app/javascript/davechmura_website/stylesheets/pages.sass
+++ b/app/javascript/davechmura_website/stylesheets/pages.sass
@@ -1,8 +1,3 @@
-@tailwind preflight
-@tailwind components
-@tailwind utilities
-
-
 .h-5
   height: 1.25rem
 .w-5
@@ -15,29 +10,29 @@
   margin-top: -6rem
 
 .page-title
-  @apply .bg-grey-light .text-grey-darkest .border-grey-darker .font-bold .py-20 .px-4 .rounded .mx-auto
+  @apply bg-gray-400 text-gray-900 border-gray-700 font-bold py-20 px-4 rounded mx-auto
 
 .page-text
-  @apply .bg-indigo-light .rounded .p-5 .text-xl
+  @apply .bg-indigo-400 .rounded .p-5 .text-xl
   p
     @apply .leading-none
-.page-text-blue
+.page-text-blue-500
   color: yellow
 
 
 .characteristic
-  @apply .flex .items-center .justify-center .text-grey-darker .font-semibold .border-2 .text-xs .border-grey-light .rounded-full .h-6 .w-6
+  @apply .flex .items-center .justify-center .text-gray-700 .font-semibold .border-2 .text-xs .border-gray-400 .rounded-full .h-6 .w-6
   &:hover
-    @apply .bg-indigo-lighter
+    @apply .bg-indigo-400
     color: white
 
 %button
   &:hover
-  @apply .bg-pink-light
+  @apply .bg-pink-400
 
 .card-button
   &:hover
-    @apply .bg-pink-light
+    @apply .bg-pink-400
 
 .header-link
-  @apply .text-lg .no-underline .text-grey-darkest
+  @apply .text-lg .no-underline .text-gray-900
