--- a/app/javascript/davechmura_website/stylesheets/resume.sass
+++ b/app/javascript/davechmura_website/stylesheets/resume.sass
@@ -21,23 +21,23 @@
       a
         @apply text-white text-2xl no-underline
         &:hover
-          @apply text-blue no-underline
+          @apply text-blue-500 no-underline
     .resume-phone
       @apply text-white font-medium text-base
     .resume-email
       @apply text-white text-sm font-medium mb-2
 
 .resume-summary
-  @apply bg-blue-lighter p-4 px-8 rounded-lg
+  @apply bg-blue-300 p-4 px-8 rounded-lg
   h2
-    @apply text-blue text-5xl float-left px-2  pr-3 align-middle leading-none
+    @apply text-blue-500 text-5xl float-left px-2  pr-3 align-middle leading-none
   p
     @apply text-xl leading-tight font-serif italic
 
 .resume
-  @apply flex flex-col-reverse text-blue-darkest
+  @apply flex flex-col-reverse text-blue-900
   h2
-    @apply text-grey-darkest font-medium font-serif italic
+    @apply text-gray-900 font-medium font-serif italic
   @screen sm
     @apply flex-row
 
@@ -46,66 +46,66 @@
   p
     @apply text-base
   h3
-    @apply p-2 text-3xl mb-2 text-grey-darkest
+    @apply p-2 text-3xl mb-2 text-gray-900
   // margin-top: 3rem
   // margin-right: 1rem
   li
-    @apply list-reset
+    @apply list-none
   .resume-experience-sidebar
-    @apply  bg-blue-light rounded-lg pb-6
+    @apply  bg-blue-400 rounded-lg pb-6
     h3
-      @apply text-grey-darkest
+      @apply text-gray-900
     li
-      @apply text-blue-darker font-bold mb-1 -ml-2 mx-auto
+      @apply text-blue-700 font-bold mb-1 -ml-2 mx-auto
     .resume-experience-description
-      @apply text-blue-lightest pb-2 -ml-4
+      @apply text-blue-100 pb-2 -ml-4
 
   .resume-a-bit-about-me-sidebar
     // background-color: #79A092
-    @apply bg-blue-light p-2 pb-8 -mt-2 rounded-lg
+    @apply bg-blue-400 p-2 pb-8 -mt-2 rounded-lg
     p
-      @apply text-blue-darker text-base px-1 pt-1
+      @apply text-blue-700 text-base px-1 pt-1
 
   .resume-education-sidebar
     // background-color: #607B9B
-    @apply bg-blue-darkest text-white rounded-lg -mt-3 px-4 pt-1 pb-4
+    @apply bg-blue-900 text-white rounded-lg -mt-3 px-4 pt-1 pb-4
     ul
       @apply -ml-10
     h2
-      @apply text-blue-lightest mb-2
+      @apply text-blue-100 mb-2
     h4
       @apply font-thin mb-1
     .degree
-      @apply ml-1 mb-4 text-sm text-blue-lighter italic
+      @apply ml-1 mb-4 text-sm text-blue-300 italic
 
   .resume-activities-sidebar
     background-color: #e64141
-    @apply bg-blue-darker p-4 pb-6 text-base text-blue-lightest -mt-4 rounded-lg
+    @apply bg-blue-700 p-4 pb-6 text-base text-blue-100 -mt-4 rounded-lg
     h2
-      @apply text-2xl text-blue-lighter
+      @apply text-2xl text-blue-300
     li
-      @apply list-reset -ml-10 leading-loose
+      @apply list-none -ml-10 leading-loose
   @screen sm
     @apply w-64
 
 .resume-qualifications
-  @apply bg-blue-lightest flex flex-col rounded-lg w-full
+  @apply bg-blue-100 flex flex-col rounded-lg w-full
   h1
-    @apply font-thin text-blue-darker
+    @apply font-thin text-blue-700
     @screen sm
       @apply hidden
 
 .resume-skills
-  @apply flex flex-col bg-yellow-light  py-2 text-base mt-1 leading-tight rounded-lg
+  @apply flex flex-col bg-yellow-400  py-2 text-base mt-1 leading-tight rounded-lg
   background-color:  #EBAA1E
 
   h2
-    // @apply text-grey-darkest font-medium font-serif italic
+    // @apply text-gray-900 font-medium font-serif italic
   li
     @apply inline
 
   .resume-skills-list
-    @apply text-blue-darker -ml-6
+    @apply text-blue-700 -ml-6
   @screen lg
     @apply flex-row
 
@@ -113,21 +113,21 @@
   @apply flex flex-col mb-4
 
 .resume-skills-set
-  @apply float-right text-2xl text-blue-lightest inline-block w-48 pt-2 ml-6 mb-3
+  @apply float-right text-2xl text-blue-100 inline-block w-48 pt-2 ml-6 mb-3
   svg
     @apply mr-1
 
 .resume-skills-items
-  @apply  text-blue-darker text-base -ml-4
+  @apply  text-blue-700 text-base -ml-4
 
 .resume-job-title
-  @apply text-lg my-2 text-blue-dark -mb-1
+  @apply text-lg my-2 text-blue-600 -mb-1
 
 .resume-employment-dates
-  @apply invisible leading-none font-semibold italic text-blue-dark
+  @apply invisible leading-none font-semibold italic text-blue-600
 
 .resume-employer
-  @apply text-grey-darkest mt-3 leading-none text-2xl text-grey-darkest
+  @apply text-gray-900 mt-3 leading-none text-2xl text-gray-900
 
 .resume-job-location
   display: none
@@ -142,7 +142,7 @@
 
 
   .resume-job-experiences
-    @apply text-blue-darkest
+    @apply text-blue-900
     li
       list-style-type: circle
       @apply leading-normal
