--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,7 +1,7 @@
 %footer.footer
   .footer-logo
-    = link_to image_tag(asset_pack_path('media/hug.jpg'),alt: "#{(t :sitename)} Logo, link to home page.", id: root_path(anchor: 'page-top')), root_path
-  .footer-links
+    = link_to image_tag(asset_pack_path('media/davechmura_website/images/DavePics/hug.jpg'),alt: "#{(t :sitename)} Logo, link to home page.", id: root_path(anchor: 'page-top')), root_path
+  %nav.footer-links
     .main-links
       = link_to 'About', about_path
       = link_to 'Contact', contact_path
@@ -17,7 +17,7 @@
         .statement= "© 2018 - Copyright - #{t :sitename}"
         / .all-rights-reserved= "All Rights Reserved"
   .foot-social
-    .social-links
+    %address.social-links
       = link_to twitter_path, target: '_blank' do
         .social
           %i.fab.fa-twitter
