--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
 
     = render 'layouts/header'
 
-    .content#content{:class => controller.controller_name}
+    %main.content#content{:class => controller.controller_name}
       = render 'layouts/flash_messages'
       = yield
     = debug(params) if Rails.env.development?
