--- a/app/views/pages/_team.html.haml
+++ b/app/views/pages/_team.html.haml
@@ -5,14 +5,18 @@
     %h3.section-subheading These are some of the roles I play.
   .roles.flex.flex-row
     .p-2
-      = image_tag(asset_pack_path('media/davechmura_aboutme.png'), alt: 'Dave Chmura holding a gaggle of Apple Puck Mice', class: 'shadow-inner rounded-full')
+      = image_tag(asset_pack_path('media/davechmura_website/images/DavePics/davechmura_aboutme.png'), alt: 'Dave Chmura holding a gaggle of Apple Puck Mice', class: 'shadow-inner rounded-full')
       %h4 Dave Chmura
       %p.text-muted Product Manager
     .p-2
-      = image_tag(asset_pack_path('media/davechmura_aboutme.png'), alt: 'Dave Chmura holding a gaggle of Apple Puck Mice', class: ' rounded-full')
+      = image_tag(asset_pack_path('media/davechmura_website/images/DavePics/davechmura_aboutme.png'), alt: 'Dave Chmura holding a gaggle of Apple Puck Mice', class: ' rounded-full')
       %h4 Dave Chmura
       %p.text-muted Developer
     .p-2
-      = image_tag(asset_pack_path('media/davechmura_aboutme.png'), alt: 'Dave Chmura holding a gaggle of Apple Puck Mice', class: 'rounded-full')
+      = image_tag(asset_pack_path('media/davechmura_website/images/DavePics/davechmura_aboutme.png'), alt: 'Dave Chmura holding a gaggle of Apple Puck Mice', class: 'rounded-full')
       %h4 Dave Chmura
       %p.text-muted Mentor
+
+
+  -# asset_pack_path('media/
+  -# asset_pack_path('media/davechmura_website/images/
