--- a/app/javascript/davechmura_website/stylesheets/ribbons.sass
+++ b/app/javascript/davechmura_website/stylesheets/ribbons.sass
@@ -13,21 +13,13 @@
   color: #f0f0f0
   transform: rotate(-45deg)
   -webkit-transform: rotate(-45deg)
-  z-index: 0
+  z-index: 5
   a
     color: #f0f0f0
     a:hover
       color: grey
-/* Custom styles
-
-.corner-ribbon.sticky
-  position: fixed
-
-.corner-ribbon.shadow
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3)
 
 /* Different positions
-
 .corner-ribbon.top-left
   top: 140px
   left: -80px
@@ -35,6 +27,7 @@
   -webkit-transform: rotate(-45deg)
 
 .corner-ribbon.top-right
+  position: absolute
   top: 120px
   right: -80px
   left: auto
